fix: disable SSL in Postgres URL to prevent timeouts
- Appended `?sslmode=disable` to JDBC URL in `application.yml`.
- This resolves SSL handshake timeouts when connecting to localhost/tunneled DB.